<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uz.jsoft.mediaplayer.presentation.ui.screens.music_list.MusicListFragment">


    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="?actionBarSize"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/optionsLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/app_name"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/space">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/shuffle_button"
            style="@style/TextLarge"
            android:layout_marginStart="14dp"
            android:drawableStart="@drawable/ic_shuffle"
            android:text="@string/aralashtirish"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/sorted_button"
            style="@style/TextLarge"
            android:layout_marginEnd="14dp"
            android:drawableStart="@drawable/ic_sorted"
            android:text="@string/sorted"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_marginTop="15dp"
            android:alpha="0.7"
            android:background="@color/hint_color"
            app:layout_constraintEnd_toEndOf="@id/sorted_button"
            app:layout_constraintStart_toStartOf="@id/shuffle_button"
            app:layout_constraintTop_toBottomOf="@id/shuffle_button" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/musicList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/optionsLayout"
        tools:listitem="@layout/music_item" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomViewLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/hint_color"
        android:clickable="true"
        android:focusable="true"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/img_album"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/sample_album"
            android:transitionName="@string/app_name"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_alignTop="@id/img_album"
            android:layout_marginHorizontal="12dp"
            android:layout_marginTop="16dp"
            android:layout_toEndOf="@id/img_album"
            android:clickable="true"
            android:ellipsize="marquee"
            android:focusable="true"
            android:fontFamily="@font/assistant"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/example_song"
            android:textColor="@color/black"
            app:layout_constraintEnd_toStartOf="@id/btn_prev"
            app:layout_constraintStart_toEndOf="@id/img_album"
            app:layout_constraintTop_toTopOf="@id/img_album" />

        <TextView
            android:id="@+id/tv_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_marginHorizontal="12dp"
            android:layout_toStartOf="@id/btn_prev"
            android:layout_toEndOf="@id/img_album"
            android:clickable="true"
            android:ellipsize="marquee"
            android:focusable="true"
            android:fontFamily="@font/assistant"
            android:marqueeRepeatLimit="marquee_forever"
            android:singleLine="true"
            android:text="@string/example_author"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintEnd_toStartOf="@+id/btn_prev"
            app:layout_constraintStart_toEndOf="@id/img_album"
            app:layout_constraintTop_toTopOf="@id/img_album" />


        <ImageView
            android:id="@+id/btn_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:src="@drawable/ic_next"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_play_pause"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:src="@drawable/ic_play"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_next"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_prev"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:contentDescription="@string/app_name"
            android:focusable="true"
            android:src="@drawable/ic_previous"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/btn_play_pause"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>