<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="64dp"
    android:background="@color/text_color">

    <ImageView
        android:id="@+id/image"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="24dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/sample_album" />

    <TextView
        android:id="@+id/ntv_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@id/image"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="16dp"
        android:layout_toStartOf="@id/btn_prev"
        android:layout_toEndOf="@id/image"
        android:ellipsize="marquee"
        android:fontFamily="@font/assistant"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/example_song"
        android:textColor="@color/white"
        app:layout_constraintEnd_toStartOf="@id/btn_prev"
        app:layout_constraintStart_toEndOf="@id/image"
        app:layout_constraintTop_toTopOf="@id/image" />

    <TextView
        android:id="@+id/ntv_author"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/ntv_title"
        android:layout_marginHorizontal="12dp"
        android:layout_toStartOf="@id/btn_prev"
        android:layout_toEndOf="@id/image"
        android:ellipsize="marquee"
        android:fontFamily="@font/assistant"
        android:marqueeRepeatLimit="marquee_forever"
        android:singleLine="true"
        android:text="@string/example_author"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <ImageView
        android:id="@+id/btn_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="30dp"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:focusable="true"
        android:src="@drawable/ic_next_white" />

    <ImageView
        android:id="@+id/btn_play_pause"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_toStartOf="@id/btn_next"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:focusable="true"
        android:src="@drawable/ic_pause_white" />

    <ImageView
        android:id="@+id/btn_prev"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_toStartOf="@id/btn_play_pause"
        android:clickable="true"
        android:contentDescription="@string/app_name"
        android:focusable="true"
        android:src="@drawable/ic_previous_white" />

    <ImageView
        android:id="@+id/btn_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_gravity="top|end"
        android:layout_margin="5dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_baseline_close"
        tools:ignore="TouchTargetSizeCheck" />

</RelativeLayout>